Fix: add td vertical align top

--- a/global-styles.css
+++ b/global-styles.css
@@ -23,6 +23,9 @@ GLOBAL STYLES
 .wp-block-latest-posts>li>a:first-of-type {
 	text-decoration: underline;
 }
+table td {
+       vertical-align: top;
+}
 /** 
 TYPOGRAPHY
 **/
